--- a/PSS/PSS/wwwroot/css/components/ListItem.css
+++ b/PSS/PSS/wwwroot/css/components/ListItem.css
@@ -88,6 +88,7 @@
     outline: 2px solid dodgerblue;
 }
 
-.listItem > select > option {
-
+.listItem > input[type="datetime-local"] {
+    color: black;
+    margin-left: 10px;
 }
