--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -25,6 +25,17 @@
 		<div id="buttons" style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")">
 			<button class="iconBtn" @onclick="@DeleteSelected"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
 		</div>
+		
+		<div id="yearWarnInputs">
+			<input id="yearCheck" type="checkbox" @bind="@yearCheckEnabled"/>
+			<label for="yearCheck">Enable Year Check</label>
+			
+			@if (yearCheckEnabled)
+			{
+				<input type="text" @bind="@minYear" placeholder="Min Year"/>
+				<input type="text" @bind="@maxYear" placeholder="Max Year"/>
+			}
+		</div>
 	</header>
 	
 	<div id="mainDiv" style="top: @(!String.IsNullOrWhiteSpace(headerMsg) || selectedItems.Count > 0 ? 60 : 0)px">
@@ -50,11 +61,16 @@
 }
 
 @code {
-
 	private bool finishedRendering;
 
 	///Used to show error or other messages in the header.
 	private string headerMsg;
+
+	///If Import should check the DT year of each item to see if it's outside of a range of valid values.
+	public static bool yearCheckEnabled = true;
+
+	///Show a warning if any items have a DT year less than or greater than these values.
+	public static int minYear, maxYear;
 
 	///Stores the absolute path of every supported file in pss_import.
 	private List<string> allAbsPaths;
@@ -75,6 +91,8 @@
 		allAbsPaths = F.GetSupportedFiles(S.importFolderPath);
 		importFiles = new List<ImportFile>(allAbsPaths.Count);
 		selectedItems.Clear();
+		minYear = 2000;
+		maxYear = DateTime.Today.Year;
 
 		await Parallel.ForEachAsync(allAbsPaths, async (absPath, _) =>
 		{
