--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -37,7 +37,7 @@
 			}
 		</div>
 		
-		<button id="clearDTBtn" class="textBtn">
+		<button id="clearDTBtn" class="textBtn" @onclick="@ClearDateTaken" style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")">
 			<span class="material-icons-outlined">dangerous</span>
 			<span>Clear DT</span>
 		</button>
@@ -163,5 +163,14 @@
 		ClearChecks();
 		OrganizeItems();
 		StateHasChanged();
+	}
+
+	private void ClearDateTaken()
+	{
+		foreach (ImportFile file in importFiles.Where(file => selectedItems.Contains(file.uuid)).ToList())
+		{
+			file.dateTakenSource = ImportFile.DateTakenSource.Custom;
+			file.customDateTaken = null;
+		}
 	}
 }
