Change "Enable Year Check" to "Year Check"

--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -28,7 +28,7 @@
 		
 		<div id="yearWarnInputs">
 			<input id="yearCheck" type="checkbox" @bind="@yearCheckEnabled"/>
-			<label for="yearCheck">Enable Year Check</label>
+			<label for="yearCheck">Year Check</label>
 			
 			@if (yearCheckEnabled)
 			{
