Change yearCheckEnabled so it's private and no longer static

--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -72,7 +72,7 @@
 	private string headerMsg;
 
 	///If Import should check the DT year of each item to see if it's outside of a range of valid values.
-	public static bool yearCheckEnabled = true;
+	private bool yearCheckEnabled = true;
 
 	///Show a warning if any items have a DT year less than or greater than these values.
 	public static int minYear, maxYear;
