Add nonfunctional control on page for searching

--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -41,6 +41,8 @@
 			<span class="material-icons-outlined">dangerous</span>
 			<span>Clear DT</span>
 		</button>
+		
+		<input id="search" type="text" placeholder="Search filenames"/>
 	</header>
 	
 	<div id="mainDiv" style="top: @(!String.IsNullOrWhiteSpace(headerMsg) || selectedItems.Count > 0 ? 60 : 0)px">
