Remove headerMsg string as no longer needed

--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -31,7 +31,7 @@ header > .iconBtn {
     margin-right: 5px;
 }
 
-header > #headerMsg {
+header > #errorAmount {
     color: red;
     position: absolute;
     left: 180px;
