--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -16,11 +16,11 @@
 
 	<KeyboardShortcuts CtrlA="@SelectAll" Esc="@ClearChecks"/>
 	
-	<header style="visibility: @(!String.IsNullOrWhiteSpace(headerMsg) || selectedItems.Count > 0 ? "visible" : "hidden")">
+	<header style="visibility: @(errorAmount > 0 || selectedItems.Count > 0 ? "visible" : "hidden")">
 		<button style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")" class="iconBtn" @onclick="@ClearChecks"><span class="material-icons">close</span></button>
 		<span style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")">@selectedItems.Count&nbsp;&nbsp;Selected</span>
 
-		<span style="visibility: @(String.IsNullOrWhiteSpace(headerMsg) ? "hidden" : "visible")" id="headerMsg">@headerMsg</span>
+		<span style="visibility: @(errorAmount > 0 ? "visible" : "hidden")" id="errorAmount">@errorAmount Filename Errors</span>
 		
 		<div id="buttons" style="visibility: @(selectedItems.Count > 0 ? "visible" : "hidden")">
 			<button class="iconBtn" @onclick="@DeleteSelected"><svg width="24px" height="24px" class="material-icons" viewBox="0 0 24 24"><path d="M15 4V3H9v1H4v2h1v13c0 1.1.9 2 2 2h10c1.1 0 2-.9 2-2V6h1V4h-5zm2 15H7V6h10v13zM9 8h2v9H9zm4 0h2v9h-2z"></path></svg></button>
@@ -45,7 +45,7 @@
 		<input id="search" type="text" @bind="@searchText" @bind:event="oninput" @onkeydown="@(e => { if (e.Code is "Enter" or "NumpadEnter") SearchItems(); })" @onfocusout="@SearchItems" placeholder="Search original/renamed filenames"/>
 	</header>
 	
-	<div id="mainDiv" style="top: @(!String.IsNullOrWhiteSpace(headerMsg) || selectedItems.Count > 0 ? 60 : 0)px">
+	<div id="mainDiv" style="top: @(errorAmount > 0 || selectedItems.Count > 0 ? 60 : 0)px">
 		@for (int i = 0; i < importFiles.Count; i++)
 		{
 			if (!String.IsNullOrWhiteSpace(searchText) && !searchResults.Contains(i)) continue;
@@ -71,9 +71,6 @@
 
 @code {
 	private bool finishedRendering;
-
-	///Used to show error or other messages in the header.
-	private string headerMsg;
 
 	///If Import should check the DT year of each item to see if it's outside of a range of valid values.
 	private bool yearCheckEnabled = true;
@@ -147,7 +144,6 @@
 		}
 
 		importFiles = errors.Concat(good).ToList();
-		headerMsg = errorAmount > 0 ? $"{errorAmount} Filename Errors" : "";
 	}
 
 	private void SearchItems()
