Add a span showing how many files there are in importFiles or how many search results there are

--- a/PSS/PSS/wwwroot/css/Import.css
+++ b/PSS/PSS/wwwroot/css/Import.css
@@ -31,10 +31,15 @@ header > .iconBtn {
     margin-right: 5px;
 }
 
-header > #errorAmount {
-    color: red;
+header > #statsDiv {
     position: absolute;
     left: 180px;
+    display: flex;
+    flex-direction: column;
+}
+
+header > #statsDiv > #errorAmount {
+    color: red;
 }
 
 header > #buttons {
