Now if there's an active search, ClearChecks will only remove those results from selectedItems

--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -160,7 +160,15 @@
 
 	private void ClearChecks()
 	{
-		selectedItems.Clear();
+		if (searchResults.Count > 0)
+		{
+			foreach (Guid uuid in searchResults)
+				selectedItems.Remove(uuid);
+		}
+		else
+		{
+			selectedItems.Clear();
+		}
 		StateHasChanged();
 	}
 
