--- a/PSS/PSS/Shared/ImportItem.razor
+++ b/PSS/PSS/Shared/ImportItem.razor
@@ -1,10 +1,10 @@
-﻿@using PSS.Pages
+@using PSS.Pages
 @using static ImportFile
 @inject IJSRuntime JSRuntime
 
-<link href="css/components/ListItem.css" rel="stylesheet">
+<link href="css/components/ImportItem.css" rel="stylesheet">
 
-<div class="listItem">
+<div class="importItem">
 	<span class="material-icons-outlined checkbox @(Import.selectedItems.Contains(ImportFile.uuid) ? "checked" : "unchecked")" @onclick="@CheckClicked">check_circle</span>
 	<img src=@(ImportFile.thumbnail == null ? $"pss_import/{ImportFile.shortPath}" : $"data:image/jpg;base64,{ImportFile.thumbnail}") onclick="window.open('pss_import/@ImportFile.shortPath', '_blank').focus();" alt="" loading="lazy"/>
 	<span class="shortPath" onclick="openEdit(@Index)">@ImportFile.shortPath</span>
