--- a/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
+++ b/PSS/PSS/wwwroot/css/components/LibraryContentViewer.css
@@ -74,7 +74,7 @@ h1 {
     opacity: 0.42;
 }
 
-#libContentViewer > .spanAndRow > .row > .thumbnail > .unchecked:hover { /* Make it 100% opaque */
+#libContentViewer > .spanAndRow > .row > .thumbnail > .unchecked:hover {
     opacity: 1;
 }
 
