--- a/PSS/PSS/Pages/Import.razor
+++ b/PSS/PSS/Pages/Import.razor
@@ -59,6 +59,24 @@
 						i++;
 					} while (i < importFiles.Count && importFiles[i - 1].originalFilename == importFiles[i].originalFilename);
 					@{ i--; } @* Kind of stupid but fixes a problem where some items could be skipped. *@
+					
+					@if (libFilesWithSameName.ContainsKey(importFiles[i].originalFilename))
+					{
+						foreach (C.MediaRow mediaRow in libFilesWithSameName[importFiles[i].originalFilename])
+						{
+							<LibraryItem MediaRow="@mediaRow"/>
+						}
+					}
+				</div>
+			}
+			else if (libFilesWithSameName.ContainsKey(importFiles[i].originalFilename))
+			{
+				<div class="errorDiv">
+					<ImportItem OnCheckClick="@StateHasChanged" Index="@i"/>
+					@foreach (C.MediaRow mediaRow in libFilesWithSameName[importFiles[i].originalFilename])
+					{
+						<LibraryItem MediaRow="@mediaRow"/>
+					}
 				</div>
 			}
 			else
@@ -86,6 +104,8 @@
 	///List of data about each supported file in pss_import.
 	public static List<ImportFile> importFiles;
 
+	private static Dictionary<string, List<C.MediaRow>> libFilesWithSameName;
+
 	///If the user does a search, store the results as the uuids of the items.
 	private readonly HashList<Guid> searchResults = new();
 
@@ -103,6 +123,7 @@
 	{
 		allAbsPaths = F.GetSupportedFiles(S.importFolderPath);
 		importFiles = new List<ImportFile>(allAbsPaths.Count);
+		libFilesWithSameName = new Dictionary<string, List<C.MediaRow>>();
 		searchResults.Clear();
 		selectedItems.Clear();
 		minYear = 2000;
@@ -124,10 +145,21 @@
 	{
 		errorAmount = 0;
 		List<ImportFile> errors = new(), good = new();
+		libFilesWithSameName.Clear();
 
 		importFiles = importFiles.OrderBy(file => file.originalFilename).ToList();
 		for (int i = 0; i < importFiles.Count; i++)
 		{
+			/* List<C.MediaRow> result = FindLibraryFilesWithSameName(importFiles[i].originalFilename); //TODO alternative
+			// if (result?.Count > 0 && !libFilesWithSameName.ContainsKey(importFiles[i].originalFilename))
+				// libFilesWithSameName.Add(importFiles[i].originalFilename, result); */
+
+			if (!libFilesWithSameName.ContainsKey(importFiles[i].originalFilename))
+			{
+				List<C.MediaRow> result = FindLibraryFilesWithSameName(importFiles[i].originalFilename + importFiles[i].extension);
+				if (result?.Count > 0) libFilesWithSameName.Add(importFiles[i].originalFilename, result);
+			}
+
 			if (i + 1 < importFiles.Count && importFiles[i].originalFilename == importFiles[i + 1].originalFilename && importFiles[i].extension == importFiles[i + 1].extension)
 			{
 				errorAmount++;
