F.GenerateThumbnail now uses randomly-generated filenames and auto-deletes them when done
Was having problems in Import where totally different video files with the same name were getting the same thumbnail even when the actual files are way different.

--- a/PSS/PSS/Pages/Maintenance/UntrackedFiles.razor
+++ b/PSS/PSS/Pages/Maintenance/UntrackedFiles.razor
@@ -42,7 +42,7 @@
                 }
                 else if (ext is ".mp4" or ".mkv" or ".mov")
                 {
-                    <img title="Click for Full Size Preview" onclick="window.open('@shortPath', '_blank').focus();" src="@("data:image/jpg;base64," + F.GenerateThumbnail(path, false))" alt="@shortPath" loading="lazy"/>
+                    <img title="Click for Full Size Preview" onclick="window.open('@shortPath', '_blank').focus();" src="@("data:image/jpg;base64," + F.GenerateThumbnail(path))" alt="@shortPath" loading="lazy"/>
                 }
 
                 <span title="@name" class="filenameSpan">@name</span>
