--- a/PSS/PSS/Shared/ImportItem.razor
+++ b/PSS/PSS/Shared/ImportItem.razor
@@ -164,6 +164,8 @@
 			ImportFile.originalFilename = ImportFile.renamedFilename;
 			ImportFile.shortPath = newShortPath;
 			ImportFile.absolutePath = newAbsPath;
+			Import.OrganizeItems();
+			OnCheckClick.Invoke();
 		}
 		OnCheckClick.Invoke();
 	}
