--- a/PSS/PSS/Pages/Test.razor
+++ b/PSS/PSS/Pages/Test.razor
@@ -1,5 +1,6 @@
 @*A blank page just for testing stuff*@
 @page "/test"
+@using System.Diagnostics
 
 <title>Test - PSS</title>
 @{
@@ -10,6 +11,12 @@
 
     private static void Yes()
     {
-        C.AddToCollection(new Guid("56ff78b0-ef4d-11ec-8ea0-0242ac120002"), 4);
+        Stopwatch s = Stopwatch.StartNew();
+        foreach (C.MediaRow mediaRow in Import.FindLibraryFilesWithSimilarName("413150_20210829220456_1"))
+        {
+            Console.WriteLine(mediaRow.path);
+        }
+        s.Stop();
+        Console.WriteLine(s.ElapsedMilliseconds);
     }
 }
